--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gifsee": "0.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-gif-player": "^0.4.2",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
